--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,3 +4,8 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_SPLIT=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_POSITION_QUEUE_SIZE=10
